CHECKPOINT: updating with last version

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "esbuild": "^0.17.13",
     "http-errors": "^2.0.0",
     "lodash": "^4.17.21",
-    "simple-lambda-api-router": "^1.1.7"
+    "simple-lambda-api-router": "1.5.3"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
